Fix the footer-group to a specific width to avoid the links' overlap

--- a/styles.css
+++ b/styles.css
@@ -168,6 +168,7 @@ button:hover {
     margin: 0;
     background: #F1F1F1;
     width: 100vw;
+    min-width: 1400px;
     border: solid 0.5px rgba(0,0,0,0.10);
     height: 40px;
 }
